# api-python-client

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
calibsunapi/: __init__.py  client.py  endpoints.py  token.py
calibsunapi/models/: listplants.py  uploadmeasurements.py
docs/: Makefile  api.rst  conf.py  configuration.rst  index.rst  installation.rst  overview.rst  quickstart.rst  requirements.txt
docs/_static/css/: custom.css
docs/api/: calibsunapi.models.rst  calibsunapi.rst  modules.rst
tests/: conftest.py
tests/resources/: plant.json
